impl todo entity and part of controller
